# bit

./: .gitignore  Cargo.toml  LICENSE  README.md  a.gk  test.gk
crates/bit/: Cargo.toml
crates/bit/src/: errors.rs  io.rs  log.rs  main.rs
crates/bit/src/commands/: build.rs  check.rs  init.rs  new.rs  run.rs
crates/bit_lint/: Cargo.toml
crates/bit_lint/src/: lint.rs
crates/bit_parse/: Cargo.toml
crates/bit_parse/src/: atom.rs  decl.rs  errors.rs  expr.rs  lib.rs  parser.rs  stmt.rs
crates/bit_rt/: Cargo.toml
crates/bit_rt/src/: error.rs  interpreter.rs
crates/bit_rt/src/builtins/: core.rs  env.rs  math.rs  mod.rs  mods.rs  utils.rs
crates/bit_rt/src/eval/: expr.rs  stmt.rs
crates/bit_rt/src/rt/: env.rs  value.rs
crates/bit_tests/: Cargo.toml
crates/bit_tests/src/: assertion.rs  lex.rs  utils.rs
crates/bit_tests/src/codegen/snapshots/: watt_tests__codegen__ast__logical_or_and.snap  watt_tests__codegen__enums__enum_with_fields.snap  watt_tests__codegen__enums__enum_with_generics.snap  watt_tests__codegen__enums__enum_with_generics_2.snap  watt_tests__codegen__enums__recursive_enums.snap  watt_tests__codegen__enums__simple_enum.snap  watt_tests__codegen__enums__wrong_enum_with_generics.snap  watt_tests__codegen__enums__wrong_enum_with_generics_2.snap  watt_tests__codegen__functions__wrong_argument.snap  watt_tests__codegen__patterns__match_boolean.snap  watt_tests__codegen__patterns__match_enum_with_lost_case_covered_by_default.snap  watt_tests__codegen__patterns__match_enum_with_params.snap  watt_tests__codegen__patterns__match_literals.snap  watt_tests__codegen__patterns__match_nested.snap  watt_tests__codegen__patterns__match_simple_enum.snap  watt_tests__codegen__semi__for_should_not_require_semi.snap  watt_tests__codegen__semi__if_should_not_require_semi.snap  watt_tests__codegen__semi__loop_should_not_require_semi.snap  watt_tests__codegen__simple__add_sub_mul_div_mod.snap  watt_tests__codegen__simple__boolean_logic.snap  watt_tests__codegen__simple__cast_int_float.snap  watt_tests__codegen__simple__if_elif_else_test.snap  watt_tests__codegen__simple__naming.snap  watt_tests__codegen__simple__parens_expr.snap  watt_tests__codegen__simple__simple_add_two_ints.snap  (+11 more)
crates/bit_tests/src/snapshots/: bit_tests__parse__parse_1.snap  bit_tests__parse__parse_3.snap  bit_tests__sema__sema_2.snap  bit_tests__sema__sema_3.snap  geko_tests__parse__parse_2.snap  geko_tests__sema__sema_1.snap  geko_tests__sema__sema_4.snap  geko_tests__sema__sema_5.snap  watt_tests__ast__logical_or_and.snap  watt_tests__lex__escape_sequence_1.snap  watt_tests__lex__escape_sequence_10.snap  watt_tests__lex__escape_sequence_11.snap  watt_tests__lex__escape_sequence_12.snap  watt_tests__lex__escape_sequence_13.snap  watt_tests__lex__escape_sequence_14.snap  watt_tests__lex__escape_sequence_15.snap  watt_tests__lex__escape_sequence_16.snap  watt_tests__lex__escape_sequence_2.snap  watt_tests__lex__escape_sequence_3.snap  watt_tests__lex__escape_sequence_4.snap  watt_tests__lex__escape_sequence_5.snap  watt_tests__lex__escape_sequence_6.snap  watt_tests__lex__escape_sequence_7.snap  watt_tests__lex__escape_sequence_8.snap  watt_tests__lex__escape_sequence_9.snap
crates/bit_typeck/: Cargo.toml
crates/bit_typeck/src/: errors.rs  ex.rs
crates/bit_typeck/src/check/: expr.rs  pipeline.rs  stmt.rs  typ.rs
crates/bit_typeck/src/cx/: module.rs  package.rs
crates/bit_typeck/src/inference/: README.md  cause.rs  coercion.rs  generics.rs
crates/bit_typeck/src/resolve/: resolve.rs  rib.rs
crates/bit_typeck/src/typ/: cx.rs  res.rs  typ.rs
crates/bit_wasm/: Cargo.toml
crates/bit_wasm/src/: io.rs  lib.rs
crates/geko_rt/: Cargo.toml
crates/geko_rt/src/: builtins.rs  env.rs  error.rs  expr.rs  flow.rs  interpreter.rs  io.rs  lib.rs  modules.rs  refs.rs  stmt.rs  value.rs
crates/geko_rt/src/builtins/: core.rs  is.rs  list.rs  math.rs  mod.rs  mods.rs
crates/geko_rt/src/eval/: expr.rs  stmt.rs
crates/geko_rt/src/rt/: env.rs  value.rs
crates/geko_tests/: Cargo.toml
crates/geko_tests/src/: assertion.rs  lex.rs  lib.rs  sema.rs
crates/geko_tests/src/snapshots/: geko_tests__parse__parse_1.snap  geko_tests__parse__parse_2.snap  geko_tests__parse__parse_3.snap  geko_tests__sema__sema_1.snap  geko_tests__sema__sema_2.snap  geko_tests__sema__sema_3.snap  geko_tests__sema__sema_4.snap  geko_tests__sema__sema_5.snap
(+118 files in other folders)
