[package]
name = "bit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
bit_common = { path = "../bit_common" }
bit_compile = { path = "../bit_compile" }
camino = "1.1.10"
thiserror = "2.0.12"
miette = { git = "https://github.com/bit-rs/miette.git", features = ["fancy"] }
ecow = "0.2.6"
bit_pm = { path = "../bit_pm" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
