[package]
name = "bit_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_common = { path = "../bit_common" }
bit_lex = { path = "../bit_lex" }
bit_ast = { path = "../bit_ast" }
thiserror = "2.0.12"
miette = { git = "https://github.com/bit-rs/miette.git", features = ["fancy"] }
ecow = "0.2.6"
