[package]
name = "bit_rt"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_common = { path = "../bit_common" }
bit_lex = { path = "../bit_lex" }
bit_parse = { path = "../bit_parse" }
bit_ast = { path = "../bit_ast" }
bit_sema = { path = "../bit_sema" }
miette = { git = "https://github.com/bit-rs/miette", features = ["fancy"] }
thiserror = "2.0.18"
crossbeam = "0.8.4"
