[package]
name = "bit_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_lex = { path = "../bit_lex" }
bit_parse = { path = "../bit_parse" }
bit_common = { path = "../bit_common" }
bit_ast = { path = "../bit_ast" }
bit_typeck = { path = "../bit_typeck" }
bit_gen = { path = "../bit_gen" }
bit_lint = { path = "../bit_lint" }
miette = { git = "https://github.com/bit-rs/miette.git", features = ["fancy"] }
camino = "1.1.10"
ecow = "0.2.6"
regex = "1.12.2"
id-arena = "2.2.1"

[dev-dependencies]
insta = "1.46.0"
