[package]
name = "bit_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.46.3"
bit_common = { path = "../bit_common" }
bit_lex = { path = "../bit_lex" }
bit_parse = { path = "../bit_parse" }
bit_sema = { path = "../bit_sema" }
bit_ast = { path = "../bit_ast" }
bit_rt = { path = "../bit_rt" }
miette = { git = "https://github.com/bit-rs/miette", features = ["fancy"] }
regex = "1.12.3"
