[lib]
crate-type = ["cdylib"]

[package]
name = "bit_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.108"
bit_rt = { path = "../bit_rt" }
bit_common = { path = "../bit_common" }
camino = "1.2.2"
miette = { git = "https://github.com/bit-rs/miette", features = ["fancy"] }
